# SendBloom

./: .gitignore  .gitmodules  CLAIM_STATUS.md  CMakeLists.txt  LICENSE  README.md  RELEASE_NOTES.md  RENDER_NOTES.md  design-qa.md
.planning/: ADR-001-fork-decision.md  ADR-002-reverb-engine.md  BUILD_MICROSTEPS.md  CROSS_AGENT_SYNTHESIS.md  MILESTONE-SPEC-v1.0-interaction-truth.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RESEARCH_ADDENDUM_USER_DOSSIER.md  RESEARCH_CORPUS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
cmake-local/: R8brain.cmake
docs/: CLEAN_ROOM.md  DAW_SMOKE_RC0.md  LICENSING_DECISION.md  RELEASE_CHECKLIST.md  THIRD_PARTY_LICENSES.md  reference-capture-protocol.md  svg-asset-prompt.md  ui-3d-render-prompt.md
scripts/: check-legal-metadata.sh  enab-acceptance-gates.sh  notarize-macos.sh  package-macos.sh  sign-macos.sh  verify-reference-claims.sh  verify-v1.sh
source/: Authentic32Mode.h  BypassCrossfade.h  DampedComb.h  DummyDspHooks.h  EngineCrossfade.h  EnvelopeDetector.h  FactoryPresets.cpp  FactoryPresets.h  Fdn8Reverb.h  FixedRateAdapter.h  GatedBloomChain.h  HostRateReverbEngine.h  IReverbEngine.h  InputStage.h  LegacyAccumulatorPath.h  NoiseGate.h  OutputStage.h  ParallelWetMixer.h  ParameterCurves.h  ParameterIDs.h  ParameterLayout.cpp  ParameterLayout.h  ParameterSnapshot.h  PlaceholderReverb.h  PlaceholderWetDirt.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PressureController.h  PressureSend.h  RateConverterPair.h  SafeXml.h  SchroederAllpass.h  SchroederTank32.h  SchroederTank32DelayTable.h  SchroederTankCore.h  SmoothedParameterBank.h  SrcLatencyTable.h  StubInputEnvelope.h  (+3 more)
tests/: AuthenticPathDiagnosticsTest.cpp  BaselinePresetMetricsTest.cpp  BlockIntegrationTest.cpp  BypassCrossfadeTest.cpp  Catch2Main.cpp  ChainTestHelpers.h  DryNeverGatedTest.cpp  DryPathIntegrityTest.cpp  DummyDspHooksTest.cpp  EngineCrossfadeTest.cpp  (+59 more)
(+331 files in other folders)
